Find the classpath entries hidden in the JDK classloaders' URLClassPath
The comment on JPMSClassLoaderHandler#findClasspathOrder described the wrong
mechanism: a Java agent does not write to the `ucp` field itself, it calls
Instrumentation#appendToSystemClassLoaderSearch(JarFile), which reaches
ucp.addFile() through ClassLoaders$AppClassLoader#appendToClassPathForInstrumentation().
Replace it with what the JDK actually does, and with the javadoc guarantee that
this leaves java.class.path unchanged, which is why the field has to be read.

A URLClassPath keeps its entries in three fields, and none of them holds all of
them: `path` (which getURLs() copies), `unopenedUrls` (the not-yet-opened entries
of `path`, plus the Class-Path manifest expansions of opened jars, which never
reach `path`), and `lmap` (keyed by the entries that have been opened, including
those expansions). Read all three, each under the monitor the JDK mutates it
under, rather than only getURLs().

Also scan the entries appended to the boot classpath with -Xbootclasspath/a or
with a Java agent's Boot-Class-Path manifest attribute. The JVM stores these in a
saved property that the application cannot read, and the bootstrap classloader
that holds them is not reachable through ClassLoader#getParent(), so they were
missed entirely; splice the bootstrap classloader into the delegation order when
it has a URLClassPath to contribute.

Test both cases in a child JVM, since each needs a JVM command line option.